refactor: Improve logic handling
 - Extract logic into custom hook
 - Use immutable list